Miscellaneous cleanup in BuildTraces code.
Summary:
* Search `buck-out/log` for trace files instead of all of `buck-out`.
* Tighten up a regex.
* Replace a use of Guava with the Java 8 equivalent.
* Strengthen a contract by returning `List` instead of `Collection`.
* Restrict a method to `private static` that was `public`.
* Unify an exit path through a method.

Test Plan: CI

Reviewed By: illicitonion

fbshipit-source-id: bdb7114