@@ -20,9 +20,7 @@ import com.facebook.buck.io.ProjectFilesystem;
 import com.facebook.buck.log.Logger;
 import com.facebook.buck.util.HumanReadableException;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
 import com.google.gson.Gson;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
@@ -38,6 +36,7 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -45,6 +44,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 
 /**
@@ -62,7 +62,7 @@ public class BuildTraces {
 
   private static final Logger logger = Logger.get(BuildTraces.class);
 
-  private static final Pattern TRACES_FILE_PATTERN = Pattern.compile("build.*.trace$");
+  private static final Pattern TRACES_FILE_PATTERN = Pattern.compile("build\\..*\\.trace$");
 
   private final ProjectFilesystem projectFilesystem;
 
@@ -153,13 +153,12 @@ public class BuildTraces {
           return command;
         }
       }
-
-      // Oh well, we tried.
-      return Optional.empty();
     } catch (IOException e) {
       logger.error(e);
-      return Optional.empty();
     }
+
+    // Oh well, we tried.
+    return Optional.empty();
   }
 
   private static Optional<String> tryToFindCommand(JsonObject json) {
@@ -190,11 +189,14 @@ public class BuildTraces {
     return name.startsWith(testPrefix) && name.endsWith(testSuffix);
   }
 
-  public Collection<Path> listTraceFilesByLastModified() throws IOException {
-    final List<Path> allTraces = Lists.newArrayList();
+  /**
+   * The most recent trace (the one with the greatest last-modified time) will be listed first.
+   */
+  public List<Path> listTraceFilesByLastModified() throws IOException {
+    final List<Path> allTraces = new ArrayList<>();
 
     projectFilesystem.walkFileTree(
-        projectFilesystem.getBuckPaths().getBuckOut(),
+        projectFilesystem.getBuckPaths().getLogDir(),
         new SimpleFileVisitor<Path>() {
           @Override
           public FileVisitResult visitFile(
@@ -239,10 +241,9 @@ public class BuildTraces {
    */
   private Collection<Path> getPathsToTraces(final String id) throws IOException {
     Preconditions.checkArgument(TRACE_ID_PATTERN.matcher(id).matches());
-
-    Collection<Path> traces = FluentIterable.from(listTraceFilesByLastModified())
+    List<Path> traces = listTraceFilesByLastModified().stream()
         .filter(input -> input.getFileName().toString().contains(id))
-        .toList();
+        .collect(Collectors.toList());
 
     if (traces.isEmpty()) {
       throw new HumanReadableException("Could not find a build trace with id %s.", id);
